--- a/cookieclicker.html
+++ b/cookieclicker.html
@@ -17,8 +17,11 @@
             display: block;
             margin: auto;
             background-image: url('cookie.webp');
-            background-size: cover;
+            background-size: 50px 50px; /* Adjust size of cookie */
             background-repeat: no-repeat;
+            width: 50px; /* Adjust size of cookie */
+            height: 50px; /* Adjust size of cookie */
+            cursor: pointer; /* Make the cookie clickable */
         }
         .title {
             position: absolute;
@@ -133,7 +136,7 @@
         <button class="upgrade-btn" onclick="buyUpgrade('Golden idols', 200000000, 2)">Buy Golden Idols (Cost: 200,000,000 cookies)</button>
         <!-- Add more buttons for other temple upgrades -->
     </div>
-    <canvas id="gameCanvas" width="400" height="600"></canvas>
+    <canvas id="gameCanvas" width="400" height="600" onclick="updateCookies()"></canvas>
     <div class="cookie-counter" id="cookieCounter">0</div>
     <div class="celebration-animation" id="celebrationAnimation"></div>
     <script>
@@ -152,7 +155,7 @@
             ctx.font = "24px Arial";
             ctx.fillText("Cookies: " + cookies, 10, 30);
             ctx.beginPath();
-            ctx.arc(canvas.width / 2, canvas.height / 2, 50, 0, Math.PI * 2);
+            ctx.arc(canvas.width / 2, canvas.height / 2, 25, 0, Math.PI * 2); /* Adjust size of cookie */
             ctx.fill();
         }
 
@@ -178,7 +181,7 @@
             }
         }
 
-        // Function to update the cookie counter
+        // Function to update cookie counter
         function updateCookieCounter(value) {
             const counter = document.getElementById('cookieCounter');
             counter.textContent = value;
