--- a/index.html
+++ b/index.html
@@ -25,14 +25,16 @@
     </header>
 
     <div class="row">
-        <div class="box" onclick="goToGame('hungergames')">Hunger Games MockingJay</div>
-        <div class="box" onclick="goToGame('refugee')">Refugee</div>
+        <div class="box" onclick="goToGame('flappy-bird')">Flappy Bird</div>
+        <div class="box" onclick="goToGame('tetris')">Tetris</div>
+        <div class="box" onclick="goToGame('cookieclicker')">Cookie Clicker</div>
+        <div class="box" onclick="goToGame('ar-test-answers')">AR Test Answers</div>
         <!-- Add more games as needed -->
     </div>
 
     <!-- Your website content goes here -->
 
-    <a href="https://discord.gg/bqM4tJgaYh" class="book-request-link">Give Book Requests</a>
+    <a href="https://discord.gg/bqM4tJgaYh" class="book-request-link">Join The Discord</a>
 
     <script>
         function goToGame(gameName) {
