--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
         <div class="box" onclick="goToGame('tetris')">Tetris</div>
         <div class="box" onclick="goToGame('cookieclicker')">Cookie Clicker</div>
         <div class="box" onclick="goToGame('ar-test-answers')">AR Test Answers</div>
+        <div class="box" onclick="goToGame('2048Main')">2048</div>
         <!-- Add more games as needed -->
     </div>
 
