--- a/Snake/SnakeMain.html
+++ b/Snake/SnakeMain.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
-    <link rel="stylesheet" href="style.css">
-    <title>Day #17 - Snake Game | AsmrProg</title>
+    <link rel="stylesheet" href="SnakeMain.css">
+    <title>Snake</title>
 </head>
 
 <body>
@@ -30,7 +30,7 @@
     </div>
 
 
-    <script src="index.js"></script>
+    <script src="SnakeMain.js"></script>
 </body>
 
 </html>
