--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
         <div class="box" onclick="goToGame('cookieclicker')">Cookie Clicker</div>
         <div class="box" onclick="goToGame('ar-test-answers')">AR Test Answers</div>
         <div class="box" onclick="goToGame('2048Main')">2048</div>
+        <div class="box" onclick="goToGame('SnakeMain')">Snake</div>
         <!-- Add more games as needed -->
     </div>
 
