--- a/index.html
+++ b/index.html
@@ -14,6 +14,29 @@
             text-decoration: underline;
             cursor: pointer;
         }
+        .box {
+            background-size: cover;
+            background-position: center;
+        }
+        .box.flappy-bird {
+            background-image: url('flappybird.png');
+        }
+        .box.tetris {
+            background-image: url('tetris.webp');
+        }
+        .box.cookieclicker {
+            background-image: url('cookieclicker.png');
+        }
+        .box.ar-test-answers {
+            background-image: url('ar-test.png');
+        }
+        .box.2048Main {
+            background-image: url('2048.png');
+        }
+        .box.SnakeMain {
+            background-image: url('snake.png');
+        }
+        /* Add more game classes and images as needed */
     </style>
 </head>
 <body>
@@ -25,12 +48,12 @@
     </header>
 
     <div class="row">
-        <div class="box" onclick="goToGame('flappy-bird')">Flappy Bird</div>
-        <div class="box" onclick="goToGame('tetris')">Tetris</div>
-        <div class="box" onclick="goToGame('cookieclicker')">Cookie Clicker</div>
-        <div class="box" onclick="goToGame('ar-test-answers')">AR Test Answers</div>
-        <div class="box" onclick="goToGame('2048Main')">2048</div>
-        <div class="box" onclick="goToGame('SnakeMain')">Snake</div>
+        <div class="box flappy-bird" onclick="goToGame('flappy-bird')">Flappy Bird</div>
+        <div class="box tetris" onclick="goToGame('tetris')">Tetris</div>
+        <div class="box cookieclicker" onclick="goToGame('cookieclicker')">Cookie Clicker</div>
+        <div class="box ar-test-answers" onclick="goToGame('ar-test-answers')">AR Test Answers</div>
+        <div class="box 2048Main" onclick="goToGame('2048Main')">2048</div>
+        <div class="box SnakeMain" onclick="goToGame('SnakeMain')">Snake</div>
         <!-- Add more games as needed -->
     </div>
 
