--- a/2048Main.html
+++ b/2048Main.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="2048Main.css">
+    <link rel="stylesheet" href="2048.css">
     <title>2048 Game</title>
 </head>
 
@@ -41,7 +41,7 @@
         <button id="restart-btn">Restart Game</button>
     </div>
 
-    <script src="2048Main.js"></script>
+    <script src="2048.js"></script>
 </body>
 
 </html>
