--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <div class="box tetris" onclick="goToGame('tetris')">Tetris</div>
         <div class="box cookieclicker" onclick="goToGame('cookieclicker')">Cookie Clicker</div>
         <div class="box ar-test-answers" onclick="goToGame('ar-test-answers')">AR Test Answers</div>
-        <div class="box 2048Main" onclick="goToGame('2048Main')">2048</div>
+        <div class="box 2048Main" onclick="goToGame('2048')">2048</div>
         <div class="box SnakeMain" onclick="goToGame('SnakeMain')">Snake</div>
         <!-- Add more games as needed -->
     </div>
